[project]
name = "vidtoolz-audio-mixer"
version = "0.1.0"
description = "Music mixer for a video"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "vidtoolz",
    "moviepy",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/vidtoolz-audio-mixer"
Changelog = "https://github.com/sukhbinder/vidtoolz-audio-mixer/releases"
Issues = "https://github.com/sukhbinder/vidtoolz-audio-mixer/issues"
CI = "https://github.com/sukhbinder/vidtoolz-audio-mixer/actions"

[project.entry-points."vidtoolz_plugins"]
amixer = "vidtoolz_audio_mixer:amixer_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
